--- a/src/main/webapp/admin/head.html
+++ b/src/main/webapp/admin/head.html
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed glyphicon glyphicon-th-list" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"></button>
+            <button type="button" class="navbar-toggle collapsed glyphicon glyphicon-th-list" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1"></button>
             <a class="navbar-brand" href="javascript:history.go(0)">Blog System</a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
