--- a/src/main/webapp/admin/list.html
+++ b/src/main/webapp/admin/list.html
@@ -1,77 +1,84 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Manage My Blogs</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-        <link rel="Shortcut Icon" href="../static/images/favicon.ico">
-        <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-        <link href="../static/css/font-awesome.min.css" rel="stylesheet">
-        <link href="../static/css/summernote.min.css" rel="stylesheet">
-        <link href="../static/css/mengular.css" rel="stylesheet">
-        <link href="../static/css/list.css" rel="stylesheet">
-        <script src="../static/js/jquery.min.js"></script> 
-        <script src="../static/js/jquery.bootstrap.min.js"></script>
-        <script src="../static/js/bootstrap.min.js"></script> 
-        <script src="../static/js/summernote.min.js"></script>
-        <script src="../static/js/mengular.js"></script>
-        <script src="../static/js/tools.js"></script>
-        <script src="../dwr/engine.js"></script>
-        <script src="../dwr/interface/AdminManager.js"></script>
-        <script src="../dwr/interface/BlogManager.js"></script>
-        <script src="../dwr/interface/TypeManager.js"></script>
-        <script src="../static/js/list.js"></script>
-    </head>
-    <body>
-        <div class="container">
-            <div id="head">
-                <script>$("#head").load("head.html");</script>
-            </div>
-            <div class="page-header">
-            	<div class="row">
-            		<div class="col-sm-3">
-            			<div id="type-list" class="btn-group">
-							<button type="button" class="btn btn-default btn-block dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-								<span class="text-muted">All Types</span>
-								<i class="fa fa-lg fa-caret-down text-muted pull-right"></i>
-							</button>
-							<ul class="dropdown-menu">
-								<li id="show-all-type"><a>All Types</a></li>
-								<li role="separator" class="divider"></li>
-							</ul>
-						</div>
-            		</div>
-            		<div class="col-sm-7">
-						<input id="search-blog" type="text" placeholder="Search Title" class="text-info text-center">
-		                <i id="search-cancel" class="fa fa-times-circle-o fa-lg pull-right text-muted"></i>
-		                <a id="add-blog" href="add.html"><i class="fa fa-plus fa-lg pull-right add-icon"></i></a>
-            		</div>
-            		<div class="col-sm-2">
-            			<button id="regenerate-all" class="btn btn-default btn-block">Regenerate All</button>
-            		</div>
-            	</div>
-            </div>
-            <div id="blog-list" class="list-group">
-                <div id="${bid}$" class="list-group-item mengular-template blog-list-template">
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-3 col-md-2"><h5>${date}$</h5></div>
-                        <div class="col-xs-12 col-sm-5 col-md-7">
-                            <p class="blog-type-tname"><small class="text-muted">${tname}$</small></p>
-                            <a href="../blogs/${bid}$" target="_blank"><span class="blog-list-title">${title}$</span></a>
-                        </div>
-                        <div class="col-xs-12 col-sm-4 col-md-3">
-                        	<div class="hidden-xs"></div>
-                            <a href="edit.html?bid=${bid}$" class="blog-accessory" title="Edit this blog"><i class="fa fa-gear fa-lg text-success"></i></a>
-                            <span class="blog-list-regenerate" title="Regenerate this blog."><i class="fa fa-refresh fa-lg text-primary blog-accessory"></i></span>
-                            <span class="blog-list-delete" title="Delete this blog"><i class="fa fa-trash-o fa-lg text-danger blog-accessory"></i></span>
-                            <span class="blog-accessory pull-right"><strong class="text-warning">${readers}$</strong> readers</span>
-                        </div>
-                    </div>
+<head>
+    <meta charset="UTF-8">
+    <title>Manage My Blogs</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <link rel="Shortcut Icon" href="../static/images/favicon.ico">
+    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/font-awesome.min.css" rel="stylesheet">
+    <link href="../static/css/summernote.min.css" rel="stylesheet">
+    <link href="../static/css/mengular.css" rel="stylesheet">
+    <link href="../static/css/list.css" rel="stylesheet">
+    <script src="../static/js/admin/jquery.min.js"></script>
+    <script src="../static/js/jquery.bootstrap.min.js"></script>
+    <script src="../static/js/bootstrap.min.js"></script>
+    <script src="../static/js/summernote.min.js"></script>
+    <script src="../static/js/mengular.js"></script>
+    <script src="../static/js/tools.js"></script>
+    <script src="../dwr/engine.js"></script>
+    <script src="../dwr/interface/AdminManager.js"></script>
+    <script src="../dwr/interface/BlogManager.js"></script>
+    <script src="../dwr/interface/TypeManager.js"></script>
+    <script src="../static/js/admin/list.js"></script>
+</head>
+<body>
+<div class="container">
+    <div id="head">
+        <script>$("#head").load("head.html");</script>
+    </div>
+    <div class="page-header">
+        <div class="row">
+            <div class="col-sm-3">
+                <div id="type-list" class="btn-group">
+                    <button type="button" class="btn btn-default btn-block dropdown-toggle" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                        <span class="text-muted">All Types</span>
+                        <i class="fa fa-lg fa-caret-down text-muted pull-right"></i>
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li id="show-all-type"><a>All Types</a></li>
+                        <li role="separator" class="divider"></li>
+                    </ul>
                 </div>
             </div>
-            <nav id="page-nav" class="text-center">
-                <ul class="pagination"></ul>
-            </nav>
+            <div class="col-sm-7">
+                <input id="search-blog" type="text" placeholder="Search Title" class="text-info text-center">
+                <i id="search-cancel" class="fa fa-times-circle-o fa-lg pull-right text-muted"></i>
+                <a id="add-blog" href="add.html"><i class="fa fa-plus fa-lg pull-right add-icon"></i></a>
+            </div>
+            <div class="col-sm-2">
+                <button id="regenerate-all" class="btn btn-default btn-block">Regenerate All</button>
+            </div>
         </div>
-    </body>
+    </div>
+    <div id="blog-list" class="list-group">
+        <div id="${bid}$" class="list-group-item mengular-template blog-list-template">
+            <div class="row">
+                <div class="col-xs-12 col-sm-3 col-md-2"><h5>${date}$</h5></div>
+                <div class="col-xs-12 col-sm-5 col-md-7">
+                    <p class="blog-type-tname">
+                        <small class="text-muted">${tname}$</small>
+                    </p>
+                    <a href="../blogs/${bid}$" target="_blank"><span class="blog-list-title">${title}$</span></a>
+                </div>
+                <div class="col-xs-12 col-sm-4 col-md-3">
+                    <div class="hidden-xs"></div>
+                    <a href="edit.html?bid=${bid}$" class="blog-accessory" title="Edit this blog"><i
+                            class="fa fa-gear fa-lg text-success"></i></a>
+                    <span class="blog-list-regenerate" title="Regenerate this blog."><i
+                            class="fa fa-refresh fa-lg text-primary blog-accessory"></i></span>
+                    <span class="blog-list-delete" title="Delete this blog"><i
+                            class="fa fa-trash-o fa-lg text-danger blog-accessory"></i></span>
+                    <span class="blog-accessory pull-right"><strong
+                            class="text-warning">${readers}$</strong> readers</span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <nav id="page-nav" class="text-center">
+        <ul class="pagination"></ul>
+    </nav>
+</div>
+</body>
 </html>
