--- a/src/main/webapp/blog.html
+++ b/src/main/webapp/blog.html
@@ -1,144 +1,152 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>#{blog-title}</title>
-		<meta name="keywords" content="浮尘追梦, fczm, Meng Li, 博客, Blog, Java Web, iOS">
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-		<link rel="Shortcut Icon" href="static/images/favicon.ico">
-		<link href="static/css/bootstrap.min.css" rel="stylesheet"/>
-		<link href="static/css/bootstrap.photo.css" rel="stylesheet"/>
-		<link href="static/css/font-awesome.min.css" rel="stylesheet"/>
-		<link href="static/css/summernote.min.css" rel="stylesheet">
-		<link href="static/css/docs.min.css" rel="stylesheet"/>
-		<link href="static/css/style.css" rel="stylesheet"/>
-		<link href="static/css/mengular.css" rel="stylesheet"/>
-		<link href="static/css/blog.css" rel="stylesheet"/>
-		<script src="static/js/jquery.min.js"></script>
-		<script src="static/js/jquery.i18n.properties.min.js"></script>
-		<script src="static/js/bootstrap.min.js"></script>
-		<script src="static/js/jquery.bootstrap.min.js"></script>
-		<script src="static/js/summernote.min.js"></script>
-		<script src="static/js/summernote-zh-CN.min.js"></script>
-		<script src="static/js/mengular.js"></script>
-		<script src="static/js/tools.js"></script>
-		<script src="dwr/engine.js"></script>
-        <script src="dwr/interface/BlogManager.js"></script>
-        <script src="dwr/interface/CommentManager.js"></script>
-        <script src="dwr/interface/AttachmentManager.js"></script>
-		<script src="static/js/blog.js"></script>
-	</head>
-	<body>
-		<div id="home" class="header">
-			<div class="top-header">
-				<div class="container">
-					<h1 class="pull-left home"><a href="blogs.html">@{blog_blogs}</a></h1>
-					<div id="language-selector" class="dropdown pull-right language">
-						<button id="language-selector-button"  class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-							<span >@{language_broswer}</span>
-							<span class="caret"></span>
-						</button>
-						<ul class="dropdown-menu" aria-labelledby="language-selector-button">
-							<li data-lang="en-US"><a>English</a></li>
-							<li data-lang="zh-CN"><a>简体中文</a></li>
-							<li data-lang="ja"><a>日本語</a></li>
-						</ul>
-					</div>
-					<div class="clearfix"> </div>
-					<h2 class="text-center">
-						<strong>#{blog-title}</strong>
-						<small><a href="blogs.html?tid=#{blog-tid}">#{blog-tname}</a></small>
-					</h2>
-					<h4 id="blog-info" class="text-center">@{blog_created_in} #{blog-date}, @{blog_readers_count} @{blog_readers}</h4>
-				</div>
-			</div>
-		</div>
-		<div class="container">
-			<div id="blog-content">#{blog-content}</div>
-			<div id="blog-attachment-title" class="page-header">
-				<h3 class="text-info">@{blog_attachments}</h3>
-			</div>
-			<div id="attachment-list">
-				<!--mengular-start="attachment-list"-->
-				<div id="#{aid}#" class="row">
-                    <div class="col-xs-10 col-sm-11">
-                        <h4>#{filename}#</h4>
-                        <small class="text-muted">@{blog_attachment_upload_at} #{upload}#, @{blog_attachment_size} #{size}#</small>
-                    </div>
-                    <div class="col-xs-2 col-sm-1">
-						<i class="fa fa-download text-primary attachment-list-download" data-id="#{aid}#"></i>
-                    </div>
-                    <div class="col-xs-12">
-                    	<hr>
-                    </div>
-                </div>
-                <!--mengular-end-->
-			</div>
-			<div class="page-header">
-                <h3 class="text-info">@{blog_visitor_comments}</h3>
+<head>
+    <meta charset="utf-8">
+    <title>#{blog-title}</title>
+    <meta name="keywords" content="浮尘追梦, fczm, Meng Li, 博客, Blog, Java Web, iOS">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <link rel="Shortcut Icon" href="static/images/favicon.ico">
+    <link href="static/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="static/css/bootstrap.photo.css" rel="stylesheet"/>
+    <link href="static/css/font-awesome.min.css" rel="stylesheet"/>
+    <link href="static/css/summernote.min.css" rel="stylesheet">
+    <link href="static/css/docs.min.css" rel="stylesheet"/>
+    <link href="static/css/style.css" rel="stylesheet"/>
+    <link href="static/css/mengular.css" rel="stylesheet"/>
+    <link href="static/css/blog.css" rel="stylesheet"/>
+    <script src="static/js/admin/jquery.min.js"></script>
+    <script src="static/js/jquery.i18n.properties.min.js"></script>
+    <script src="static/js/bootstrap.min.js"></script>
+    <script src="static/js/jquery.bootstrap.min.js"></script>
+    <script src="static/js/summernote.min.js"></script>
+    <script src="static/js/summernote-zh-CN.min.js"></script>
+    <script src="static/js/mengular.js"></script>
+    <script src="static/js/tools.js"></script>
+    <script src="dwr/engine.js"></script>
+    <script src="dwr/interface/BlogManager.js"></script>
+    <script src="dwr/interface/CommentManager.js"></script>
+    <script src="dwr/interface/AttachmentManager.js"></script>
+    <script src="static/js/blog/blog.js"></script>
+</head>
+<body>
+<div id="home" class="header">
+    <div class="top-header">
+        <div class="container">
+            <h1 class="pull-left home"><a href="blogs.html">@{blog_blogs}</a></h1>
+            <div id="language-selector" class="dropdown pull-right language">
+                <button id="language-selector-button" class="btn dropdown-toggle" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="true">
+                    <span>@{language_broswer}</span>
+                    <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="language-selector-button">
+                    <li data-lang="en-US"><a>English</a></li>
+                    <li data-lang="zh-CN"><a>简体中文</a></li>
+                    <li data-lang="ja"><a>日本語</a></li>
+                </ul>
             </div>
-            <h4 id="no-comment" class="text-muted">@{blog_no_comments}</h4>
-            <div id="comment-list" class="container">
-				<div id="${cid}$" class="bs-callout mengular-template comment-list-template">
-					<div class="row">
-						<div class="col-xs-12 col-sm-8 col-md-9">
-							<h4 class="text-success">${name}$</h4>
-						</div>
-						<div class="col-xs-12 col-sm-4 col-md-3">
-							<h4 class="pull-right text-warning">${date}$</h4>
-						</div>
-					</div>
-					<hr>
-					<div>${content}$</div>
-				</div>
-			</div>	
-			<div class="page-header">
-				<h3 id="blog-write-comment" class="text-info">@{blog_write_comment}</h3>	
+            <div class="clearfix"></div>
+            <h2 class="text-center">
+                <strong>#{blog-title}</strong>
+                <small><a href="blogs.html?tid=#{blog-tid}">#{blog-tname}</a></small>
+            </h2>
+            <h4 id="blog-info" class="text-center">@{blog_created_in} #{blog-date}, @{blog_readers_count}
+                @{blog_readers}</h4>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div id="blog-content">#{blog-content}</div>
+    <div id="blog-attachment-title" class="page-header">
+        <h3 class="text-info">@{blog_attachments}</h3>
+    </div>
+    <div id="attachment-list">
+        <!--mengular-start="attachment-list"-->
+        <div id="#{aid}#" class="row">
+            <div class="col-xs-10 col-sm-11">
+                <h4>#{filename}#</h4>
+                <small class="text-muted">@{blog_attachment_upload_at} #{upload}#, @{blog_attachment_size} #{size}#
+                </small>
             </div>
-            <div id="add-blog-comment" class="row">
-            	<div id="add-comment-content"></div>
-            	<div class="row">
-            		<div class="col-xs-8 col-sm-10">
-						<input id="add-comment-name" type="text" placeholder="@{blog_your_name}">
-					</div>
-					<div class="col-xs-4 col-sm-2">
-						<button id="add-comment-submit" class="btn btn-block">@{blog_comment_submit}</button>
-					</div>
-            	</div>
+            <div class="col-xs-2 col-sm-1">
+                <i class="fa fa-download text-primary attachment-list-download" data-id="#{aid}#"></i>
             </div>
-		</div>
-		<div id="foot">
-			<script>
-				$(document).ready(function() {
-					$("#foot").load("../foot.html");
-				});
-			</script>
-		</div>
-		<div id="attachment-download-modal" class="modal fade">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title">@{blog_download_attachment_title}</h4>
-                    </div>
-                    <div class="modal-body">
-                    	<h4 id="attachment-download-filename"></h4>
-                    	<small>@{blog_attachment_upload_at} <span id="attachment-download-upload"></span>, @{blog_attachment_size} <span id="attachment-download-size"></span></small>
-                    	<div class="row">
-                    		<div class="col-xs-7 col-sm-9">
-                    			<input id="attachment-download-code" type="text" placeholder="@{blog_download_attachment_validate}">
-                    		</div>
-                    		<div class="col-xs-5 col-sm-3">
-                    			<img id="attachment-download-validate">
-                    		</div>
-                    	</div>
-                    </div>
-                    <div class="modal-footer">
-                        <button class="btn btn-default pull-left" data-dismiss="modal">@{blog_download_attachment_close}</button>
-                        <button id="attachment-download-submit" class="btn btn-primary">@{blog_download_attachment_submit}</button>
-                    </div>
-                </div>
+            <div class="col-xs-12">
+                <hr>
             </div>
         </div>
-	</body>
+        <!--mengular-end-->
+    </div>
+    <div class="page-header">
+        <h3 class="text-info">@{blog_visitor_comments}</h3>
+    </div>
+    <h4 id="no-comment" class="text-muted">@{blog_no_comments}</h4>
+    <div id="comment-list" class="container">
+        <div id="${cid}$" class="bs-callout mengular-template comment-list-template">
+            <div class="row">
+                <div class="col-xs-12 col-sm-8 col-md-9">
+                    <h4 class="text-success">${name}$</h4>
+                </div>
+                <div class="col-xs-12 col-sm-4 col-md-3">
+                    <h4 class="pull-right text-warning">${date}$</h4>
+                </div>
+            </div>
+            <hr>
+            <div>${content}$</div>
+        </div>
+    </div>
+    <div class="page-header">
+        <h3 id="blog-write-comment" class="text-info">@{blog_write_comment}</h3>
+    </div>
+    <div id="add-blog-comment" class="row">
+        <div id="add-comment-content"></div>
+        <div class="row">
+            <div class="col-xs-8 col-sm-10">
+                <input id="add-comment-name" type="text" placeholder="@{blog_your_name}">
+            </div>
+            <div class="col-xs-4 col-sm-2">
+                <button id="add-comment-submit" class="btn btn-block">@{blog_comment_submit}</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div id="foot">
+    <script>
+        $(document).ready(function () {
+            $("#foot").load("../foot.html");
+        });
+    </script>
+</div>
+<div id="attachment-download-modal" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
+                </button>
+                <h4 class="modal-title">@{blog_download_attachment_title}</h4>
+            </div>
+            <div class="modal-body">
+                <h4 id="attachment-download-filename"></h4>
+                <small>@{blog_attachment_upload_at} <span id="attachment-download-upload"></span>,
+                    @{blog_attachment_size} <span id="attachment-download-size"></span></small>
+                <div class="row">
+                    <div class="col-xs-7 col-sm-9">
+                        <input id="attachment-download-code" type="text"
+                               placeholder="@{blog_download_attachment_validate}">
+                    </div>
+                    <div class="col-xs-5 col-sm-3">
+                        <img id="attachment-download-validate">
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-default pull-left" data-dismiss="modal">@{blog_download_attachment_close}
+                </button>
+                <button id="attachment-download-submit" class="btn btn-primary">@{blog_download_attachment_submit}
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+</body>
 </html>
