--- a/src/main/webapp/urlError.html
+++ b/src/main/webapp/urlError.html
@@ -1,44 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-        <link href="static/images/favicon.ico" type="image/x-icon" rel="icon"> 
-        <link href="static/css/bootstrap.min.css" rel="stylesheet">
-        <style type="text/css">
-            body {
-                background: #eee;
-            }
-            
-            .jumbotron h1,p {
-            	text-align: center;
-            	color: #E80000;
-            }
-            .jumbotron a {
-            	width: 100%;
-            }
-        </style>
-        <script src="static/js/jquery.min.js"></script>
-        <script src="static/js/jquery.i18n.properties.min.js"></script>
-        <script src="static/js/mengular.js"></script>
-        <script src="static/js/tools.js"></script>
-        <script type="text/javascript">
-        	$(document).ready(function() {
-                i18n("urlError", "static/i18n/", [
-                    "url_error_title",
-                    "url_error_content",
-                    "url_error_back"
-                ], "url_error_title");
-        	});
-        </script>
-    </head>
-    <body>
-    	<div class="container">
-    	    <div class="jumbotron">
-	            <h1>@{url_error_title}</h1>
-	            <p class="text-warning">@{url_error_content}</p>
-	            <p><a class="btn btn-warning btn-lg" href="index.html">@{url_error_back}</a></p>
-	        </div>
-    	</div>
-    </body>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <link href="static/images/favicon.ico" type="image/x-icon" rel="icon">
+    <link href="static/css/bootstrap.min.css" rel="stylesheet">
+    <style type="text/css">
+        body {
+            background: #eee;
+        }
+
+        .jumbotron h1, p {
+            text-align: center;
+            color: #E80000;
+        }
+
+        .jumbotron a {
+            width: 100%;
+        }
+    </style>
+    <script src="static/js/admin/jquery.min.js"></script>
+    <script src="static/js/jquery.i18n.properties.min.js"></script>
+    <script src="static/js/mengular.js"></script>
+    <script src="static/js/tools.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            i18n("urlError", "static/i18n/", [
+                "url_error_title",
+                "url_error_content",
+                "url_error_back"
+            ], "url_error_title");
+        });
+    </script>
+</head>
+<body>
+<div class="container">
+    <div class="jumbotron">
+        <h1>@{url_error_title}</h1>
+        <p class="text-warning">@{url_error_content}</p>
+        <p><a class="btn btn-warning btn-lg" href="index.html">@{url_error_back}</a></p>
+    </div>
+</div>
+</body>
 </html>
