Updaten router policy.

--- a/src/main/webapp/admin/edit.html
+++ b/src/main/webapp/admin/edit.html
@@ -3,37 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <title>Edit Blog</title>
-    <link rel="Shortcut Icon" href="../static/images/favicon.ico">
+    <link rel="Shortcut Icon" href="/static/images/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../static/css/bootstrap-switch.min.css" rel="stylesheet">
-    <link href="../static/css/font-awesome.min.css" rel="stylesheet">
-    <link href="../static/css/summernote.min.css" rel="stylesheet">
-    <link href="../static/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
-    <link href="../static/css/jquery.fileupload-ui.css" rel="stylesheet">
-    <link href="../static/css/jquery.fileupload.css" rel="stylesheet">
-    <link href="../static/css/mengular.css" rel="stylesheet">
-    <link href="../static/css/edit.css" rel="stylesheet">
-    <script src="../static/js/admin/jquery.min.js"></script>
-    <script src="../static/js/jquery.ui.widget.js"></script>
-    <script src="../static/js/jquery.iframe-transport.js"></script>
-    <script src="../static/js/jquery.fileupload.js"></script>
-    <script src="../static/js/jquery.bootstrap.min.js"></script>
-    <script src="../static/js/clipboard.min.js"></script>
-    <script src="../static/js/bootstrap.min.js"></script>
-    <script src="../static/js/bootstrap-switch.min.js"></script>
-    <script src="../static/js/bootstrap-datetimepicker.min.js"></script>
-    <script src="../static/js/bootstrap-datetimepicker.zh-CN.js"></script>
-    <script src="../static/js/summernote.min.js"></script>
-    <script src="../static/js/mengular.js"></script>
-    <script src="../static/js/tools.js"></script>
-    <script src="../dwr/engine.js"></script>
-    <script src="../dwr/interface/BlogManager.js"></script>
-    <script src="../dwr/interface/AdminManager.js"></script>
-    <script src="../dwr/interface/TypeManager.js"></script>
-    <script src="../dwr/interface/IllustrationManager.js"></script>
-    <script src="../dwr/interface/AttachmentManager.js"></script>
-    <script src="../static/js/admin/edit.js"></script>
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/bootstrap-switch.min.css" rel="stylesheet">
+    <link href="/static/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/static/css/summernote.min.css" rel="stylesheet">
+    <link href="/static/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
+    <link href="/static/css/jquery.fileupload-ui.css" rel="stylesheet">
+    <link href="/static/css/jquery.fileupload.css" rel="stylesheet">
+    <link href="/static/css/mengular.css" rel="stylesheet">
+    <link href="/static/css/edit.css" rel="stylesheet">
+    <script src="/static/js/admin/jquery.min.js"></script>
+    <script src="/static/js/jquery.ui.widget.js"></script>
+    <script src="/static/js/jquery.iframe-transport.js"></script>
+    <script src="/static/js/jquery.fileupload.js"></script>
+    <script src="/static/js/jquery.bootstrap.min.js"></script>
+    <script src="/static/js/clipboard.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/bootstrap-switch.min.js"></script>
+    <script src="/static/js/bootstrap-datetimepicker.min.js"></script>
+    <script src="/static/js/bootstrap-datetimepicker.zh-CN.js"></script>
+    <script src="/static/js/summernote.min.js"></script>
+    <script src="/static/js/mengular.js"></script>
+    <script src="/static/js/tools.js"></script>
+    <script src="/dwr/engine.js"></script>
+    <script src="/dwr/interface/BlogManager.js"></script>
+    <script src="/dwr/interface/AdminManager.js"></script>
+    <script src="/dwr/interface/TypeManager.js"></script>
+    <script src="/dwr/interface/IllustrationManager.js"></script>
+    <script src="/dwr/interface/AttachmentManager.js"></script>
+    <script src="/static/js/admin/edit.js"></script>
 </head>
 <body>
 <div class="container">
