--- a/src/main/webapp/admin/head.html
+++ b/src/main/webapp/admin/head.html
@@ -13,8 +13,8 @@
                 <li><a href="config.html">Config</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="../blogs.html" target="_blank">Blogs</a></li>
-                <li><a href="../LogoutServlet?task=adminLogout">Exit</a></li>
+                <li><a href="/blogs.html" target="_blank">Blogs</a></li>
+                <li><a href="/LogoutServlet?task=adminLogout">Exit</a></li>
             </ul>
         </div>
     </div>
