--- a/src/main/webapp/admin/types.html
+++ b/src/main/webapp/admin/types.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <title>Manage My Blogs</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <link rel="Shortcut Icon" href="../static/images/favicon.ico">
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../static/css/font-awesome.min.css" rel="stylesheet">
-    <link href="../static/css/summernote.min.css" rel="stylesheet">
-    <link href="../static/css/mengular.css" rel="stylesheet">
-    <link href="../static/css/types.css" rel="stylesheet">
-    <script src="../static/js/admin/jquery.min.js"></script>
-    <script src="../static/js/jquery.bootstrap.min.js"></script>
-    <script src="../static/js/bootstrap.min.js"></script>
-    <script src="../static/js/summernote.min.js"></script>
-    <script src="../static/js/mengular.js"></script>
-    <script src="../static/js/tools.js"></script>
-    <script src="../dwr/engine.js"></script>
-    <script src="../dwr/interface/AdminManager.js"></script>
-    <script src="../dwr/interface/TypeManager.js"></script>
-    <script src="../static/js/admin/types.js"></script>
+    <link rel="Shortcut Icon" href="/static/images/favicon.ico">
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/static/css/summernote.min.css" rel="stylesheet">
+    <link href="/static/css/mengular.css" rel="stylesheet">
+    <link href="/static/css/types.css" rel="stylesheet">
+    <script src="/static/js/admin/jquery.min.js"></script>
+    <script src="/static/js/jquery.bootstrap.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/summernote.min.js"></script>
+    <script src="/static/js/mengular.js"></script>
+    <script src="/static/js/tools.js"></script>
+    <script src="/dwr/engine.js"></script>
+    <script src="/dwr/interface/AdminManager.js"></script>
+    <script src="/dwr/interface/TypeManager.js"></script>
+    <script src="/static/js/admin/types.js"></script>
 </head>
 <body>
 <div class="container">
