--- a/src/main/webapp/downloadError.html
+++ b/src/main/webapp/downloadError.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Download Error</title>
-    <link href="static/images/favicon.ico" type="image/x-icon" rel="icon">
-    <link href="static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/images/favicon.ico" type="image/x-icon" rel="icon">
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <style type="text/css">
         body {
             background: #eee;
@@ -20,13 +20,13 @@
             width: 100%;
         }
     </style>
-    <script src="static/js/admin/jquery.min.js"></script>
-    <script src="static/js/jquery.i18n.properties.min.js"></script>
-    <script src="static/js/mengular.js"></script>
-    <script src="static/js/tools.js"></script>
+    <script src="/static/js/admin/jquery.min.js"></script>
+    <script src="/static/js/jquery.i18n.properties.min.js"></script>
+    <script src="/static/js/mengular.js"></script>
+    <script src="/static/js/tools.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
-            i18n("downloadError", "static/i18n/", [
+            i18n("downloadError", "/static/i18n/", [
                 "download_error_title",
                 "download_error_content",
                 "download_error_back"
