--- a/src/main/webapp/urlError.html
+++ b/src/main/webapp/urlError.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <link href="static/images/favicon.ico" type="image/x-icon" rel="icon">
-    <link href="static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/images/favicon.ico" type="image/x-icon" rel="icon">
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <style type="text/css">
         body {
             background: #eee;
