--- a/src/main/webapp/admin/config.html
+++ b/src/main/webapp/admin/config.html
@@ -5,20 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Config Manager</title>
-    <link href="../static/images/favicon.ico" type="image/x-icon" rel="icon">
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../static/css/font-awesome.min.css" rel="stylesheet">
-    <link href="../static/css/mengular.css" rel="stylesheet">
-    <link href="../static/css/config.css" rel="stylesheet">
-    <script src="../static/js/admin/jquery.min.js"></script>
-    <script src="../static/js/bootstrap.min.js"></script>
-    <script src="../static/js/jquery.bootstrap.min.js"></script>
-    <script src="../static/js/mengular.js"></script>
-    <script src="../dwr/engine.js"></script>
-    <script src="../dwr/interface/AdminManager.js"></script>
-    <script src="../dwr/interface/ConfigManager.js"></script>
-    <script src="../static/js/tools.js"></script>
-    <script src="../static/js/admin/config.js"></script>
+    <link href="/static/images/favicon.ico" type="image/x-icon" rel="icon">
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/static/css/mengular.css" rel="stylesheet">
+    <link href="/static/css/config.css" rel="stylesheet">
+    <script src="/static/js/admin/jquery.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/jquery.bootstrap.min.js"></script>
+    <script src="/static/js/mengular.js"></script>
+    <script src="/dwr/engine.js"></script>
+    <script src="/dwr/interface/AdminManager.js"></script>
+    <script src="/dwr/interface/ConfigManager.js"></script>
+    <script src="/static/js/tools.js"></script>
+    <script src="/static/js/admin/config.js"></script>
 </head>
 <body>
 <div class="container">
