--- a/src/main/webapp/admin/sessionError.html
+++ b/src/main/webapp/admin/sessionError.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <link href="../static/images/favicon.ico" type="image/x-icon" rel="icon">
+    <link href="/static/images/favicon.ico" type="image/x-icon" rel="icon">
     <title>Login Timeout</title>
-    <link rel="stylesheet" href="../static/css/bootstrap.min.css">
-    <link href="../static/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <link href="/static/css/font-awesome.min.css" rel="stylesheet">
     <style type="text/css">
         body {
             background: #f9f9f9;
             text-align: center;
         }
     </style>
-    <script src="../static/js/admin/jquery.min.js"></script>
+    <script src="/static/js/admin/jquery.min.js"></script>
     <script type="text/javascript">
         var count = 5;
         $(document).ready(function () {
