--- a/src/main/webapp/blogs.html
+++ b/src/main/webapp/blogs.html
@@ -4,23 +4,23 @@
     <meta charset="utf-8">
     <meta name="keywords" content="浮尘追梦, fczm, Meng Li, 博客, Blog, Java Web, iOS">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <link rel="Shortcut Icon" href="static/images/favicon.ico">
-    <link href="static/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="static/css/bootstrap.photo.css" rel="stylesheet"/>
-    <link href="static/css/font-awesome.min.css" rel="stylesheet">
-    <link href="static/css/docs.min.css" rel="stylesheet"/>
-    <link href="static/css/style.css" rel="stylesheet"/>
-    <link href="static/css/mengular.css" rel="stylesheet"/>
-    <link href="static/css/blogs.css" rel="stylesheet"/>
-    <script src="static/js/admin/jquery.min.js"></script>
-    <script src="static/js/jquery.i18n.properties.min.js"></script>
-    <script src="static/js/bootstrap.min.js"></script>
-    <script src="static/js/mengular.js"></script>
-    <script src="static/js/tools.js"></script>
-    <script src="dwr/engine.js"></script>
-    <script src="dwr/interface/BlogManager.js"></script>
-    <script src="dwr/interface/TypeManager.js"></script>
-    <script src="static/js/blog/blogs.js"></script>
+    <link rel="Shortcut Icon" href="/static/images/favicon.ico">
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="/static/css/bootstrap.photo.css" rel="stylesheet"/>
+    <link href="/static/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/static/css/docs.min.css" rel="stylesheet"/>
+    <link href="/static/css/style.css" rel="stylesheet"/>
+    <link href="/static/css/mengular.css" rel="stylesheet"/>
+    <link href="/static/css/blogs.css" rel="stylesheet"/>
+    <script src="/static/js/admin/jquery.min.js"></script>
+    <script src="/static/js/jquery.i18n.properties.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/mengular.js"></script>
+    <script src="/static/js/tools.js"></script>
+    <script src="/dwr/engine.js"></script>
+    <script src="/dwr/interface/BlogManager.js"></script>
+    <script src="/dwr/interface/TypeManager.js"></script>
+    <script src="/static/js/blog/blogs.js"></script>
 </head>
 <body>
 <div id="home" class="header">
